Use List.of/copyOf instead of ImmutableList.